# stfu

./: Cargo.toml  README.md  parse_word_list.py
src/: filter.rs  lib.rs  types.rs
src/word_lists/: category.rs  mod.rs  severity.rs  word.rs
